--- a/index.html
+++ b/index.html
@@ -2,10 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Jennifer Vernet - Developpeuse Web</title>
+    <title>Jennifer Vernet - Développeuse Web</title>
+
+    <meta
+      name="description"
+      content="Découvrez le portfolio de Jennifer Vernet, développeuse web spécialisée en React, JavaScript, et Node.js. Explorez ses projets, compétences, et expériences dans le développement frontend et backend."
+    />
+
+    <meta property="og:title" content="Jennifer Vernet - Développeuse Web" />
+    <meta
+      property="og:description"
+      content="Découvrez mes projets et compétences en tant que développeuse web spécialisée en React et SCSS."
+    />
+
+    <meta property="og:url" content="https://tonportfolio.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Jennifer Vernet",
+        "jobTitle": "Web Developer",
+        "url": "https://tonportfolio.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/jennifer-vernet",
+          "https://github.com/jennifer-vernet"
+        ],
+        "alumniOf": {
+          "name": "OpenClassRooms"
+        },
+        "knowsAbout": [
+          "Web Development",
+          "React",
+          "SCSS",
+          "Frontend Development"
+        ],
+        "email": "mailto:jennifer.vernet.dev@gmail.com"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
