--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         "@type": "Person",
         "name": "Jennifer Vernet",
         "jobTitle": "Web Developer",
-        "url": "https://tonportfolio.com",
+        "url": "hhttps://portfolio-i42pqb4zs-9junko9s-projects.vercel.app/",
         "sameAs": [
           "https://www.linkedin.com/in/jennifer-vernet",
           "https://github.com/jennifer-vernet"
